Add smac env files

--- a/src/config/envs/sc2.yaml
+++ b/src/config/envs/sc2.yaml
@@ -21,7 +21,7 @@ env_args:
   reward_scale_rate: 20
   reward_sparse: False
   reward_win: 200
-  replay_dir: ""
+  replay_dir: "/fs/nexus-scratch/peihong/epmarl_results/replays"
   replay_prefix: ""
   state_last_action: False
   state_timestep_number: False
