--- a/src/config/default.yaml
+++ b/src/config/default.yaml
@@ -25,7 +25,7 @@ evaluate: False # Evaluate model for test_nepisode episodes and quit (no trainin
 render: False # Render the environment when evaluating (only when evaluate == True)
 load_step: 0 # Load model trained on this many timesteps (0 if choose max possible)
 save_replay: False # Saving the replay of the model loaded from checkpoint_path
-local_results_path: "results" # Path for local results
+local_results_path: "/fs/nexus-scratch/peihong/contrastive_results_2410" # Path for local results
 
 # --- RL hyperparameters ---
 gamma: 0.99
