modify smac env: add sight_range; add unit type for several new maps

--- a/src/config/envs/sc2.yaml
+++ b/src/config/envs/sc2.yaml
@@ -6,6 +6,7 @@ env_args:
   game_version: null
   map_name: "3m"
   move_amount: 2
+  sight_range: 9
   obs_all_health: True
   obs_instead_of_state: False
   obs_last_action: False
